nginxhello/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginxhello-server
  labels:
    app: nginxhello
spec:
  replicas: 10
  selector:
    matchLabels:
      pod-label: nginxhello
  template:
    metadata:
      labels:
        pod-label: nginxhello
    spec:
      containers:
        - name: nginxhello
          image: nginxdemos/hello
