nginxhello/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginxhello-service
  labels:
    app: nginxhello
spec:
  selector:
    pod-label: nginxhello
  ports:
    - protocol: TCP
      port: 80
  type: LoadBalancer
