nginxhello/ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginxhello-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`hello.onegr.id`)
      services:
        - name: nginxhello-service
          port: 80
